--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -5,11 +5,11 @@
 {% for item in bruh %}
 <div class="row border-top">
 
-  <div class="col-md-4 col-12 p-0">
+  <div class="col-md-4 col-12 pl-5 pr-0 py-0">
     <a href="{% url 'listings' list_id=item.id %}" class="nav-link stretched-link"><img src="{{item.image.url}}" class="img-fluid" alt="Porsche 911">
     </a>
   </div>
-  <div class="col-md-8 col-12 p-0">
+  <div class="col-md-8 col-12 m-0 p-0">
     <a href="{% url 'listings' list_id=item.id %}" class="text-decoration-none stretched-link p-0">
     <ul class="list-group list-group-flush border-left">
         <li class="list-group-item text-dark"><strong>Title:</strong> {{item.title}}
